Clear up some warnings and cruft

--- a/app/src/main/res/layout/activity_games_list.xml
+++ b/app/src/main/res/layout/activity_games_list.xml
@@ -16,7 +16,8 @@
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:targetApi="lollipop" />
 
     <ListView
         android:id="@+id/games"
