--- a/app/src/main/res/layout/activity_games_list.xml
+++ b/app/src/main/res/layout/activity_games_list.xml
@@ -36,7 +36,7 @@
 
     </ListView>
 
-    <GridLayout
+    <controls.SlidingGridLayout
         android:id="@+id/dropBox"
         android:layout_width="match_parent"
         android:layout_height="45dp"
@@ -46,7 +46,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
+        <android.support.v7.widget.AppCompatEditText
             android:id="@+id/searchTitle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -55,6 +55,6 @@
             android:inputType="text"
             android:selectAllOnFocus="true"
             android:singleLine="true" />
-    </GridLayout>
+    </controls.SlidingGridLayout>
 
 </android.support.constraint.ConstraintLayout>
